--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,26 +11,17 @@ const last_posts = posts.slice(0, 3);
 
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
-    <div class="text-xl py-1">Hey there 👋</div>
-    <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
-    <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
+    <div class="text-5xl font-bold">Wesley Jeffrey</div>
+    <div class="text-3xl py-3 font-bold">PhD Sociology</div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ut incidunt assumenda animi reiciendis corrupti facilis iusto tempora iste ducimus rerum mollitia voluptatem hic nostrum laborum sunt nulla, labore numquam!
       </text>
-    </div>
-    <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
-      </a>
     </div>
   </div>
 
   <div>
-    <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
+    <div class="text-3xl w-full font-bold mb-2">My last publications</div>
   </div>
 
   <HorizontalCard
@@ -56,7 +47,7 @@ const last_posts = posts.slice(0, 3);
     badge="FOSS"
   />
 
-  <div>
+  <!-- <div>
     <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
   </div>
 
@@ -74,5 +65,9 @@ const last_posts = posts.slice(0, 3);
         <div class="divider my-0" />
       </>
     ))
-  }
+  } -->
+
+  <div class="mt-8">
+    
+  </div>
 </BaseLayout>
