made some changes in page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,20 +15,19 @@ const last_posts = posts.slice(0, 3);
     <div class="text-3xl py-3 font-bold">PhD Sociology</div>
     <div class="py-2">
       <text class="text-lg">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ut incidunt assumenda animi reiciendis corrupti facilis iusto tempora iste ducimus rerum mollitia voluptatem hic nostrum laborum sunt nulla, labore numquam!
-      </text>
+        I am passionate about better understanding what leads to social inequality in the U.S. I am especially interested in helping to uncover the processes and mechanisms that shape unequal access, persistence, and success in higher education. I am dedicated to finding real-life solutions to persistent inequality utilizing education as a means to equitable opportunity for all.      </text>
     </div>
   </div>
 
   <div>
-    <div class="text-3xl w-full font-bold mb-2">My last publications</div>
+    <div class="text-3xl w-full font-bold mb-2">My last publications:</div>
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    title="Unpacking the Gap: Socioeconomic Background and the Stratification of College Applications in the United States"
+    img="https://media.springernature.com/w316/springer-static/cover-hires/journal/11162?as=webp"
+    desc="While a substantial body of work has shown that higher-SES students tend to apply to more selective colleges than their lower-SES counterparts, we know relatively less about why students differ in their application behavior. In this study, we draw upon a sociological approach to educational stratification to unpack the SES-based gap in college application selectivity. Using data from the High School Longitudinal Study of 2009, we examine the contribution of theoretical factors to the class-based gap in the selectivity of college applications. Namely, from the rational action model we estimate the contribution of performance differentials and choice differentials, while from the status attainment model we look at the level and type of educational expectations as well as the number of applications submitted. Through a series of Heckman selection models, as well as a Blinder-Oaxaca decomposition analysis, we can explain 85% of the gap in college application selectivity between students in the top and bottom SES quintiles. In turn, we estimate that 60% of this explained portion is due to rational action mechanisms such as grades and test scores while 35% is due to status attainment mechanisms. Finally, we reveal that SES moderates the relationship between type of expectations and application selectivity. We find that the payoff to higher expectations (in terms of selective applications) disproportionately accrues to higher-SES students."
+    url="https://link.springer.com/article/10.1007/s11162-024-09780-z"
     badge="NEW"
   />
   <div class="divider my-0"></div>
@@ -66,8 +65,4 @@ const last_posts = posts.slice(0, 3);
       </>
     ))
   } -->
-
-  <div class="mt-8">
-    
-  </div>
 </BaseLayout>
